tests/sksl/errors/ReturnMissingValue.glsl
### Compilation failed:

error: 1: expected function to return 'int'
error: 1: function 'foo' exits without returning a value
2 errors
